[package]
name = "media_sdk"
version = "0.1.12"
authors = ["Robert Labonte <rlabonte@fastly.com>"]
edition = "2021"
description = "Media SDK Proof of Concept"
categories = ["wasm", "media", "video", "image"]
repository = "https://github.com/fastly/rust-ffmpeg-wasi"
keywords = ["ffmpeg", "libavcodec", "libavformat", "wasi", "wasm", "video", "images", "audio"]
readme = "README.md"

[dependencies]
nom = { version = "5.1.0", optional = true }
fastly = "0.8"
#libc = "0"
jpeg-encoder = "0.5"
png = "0.17.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastly-kv-preview = "0"
sha1 = "0"
m3u8-rs = "^5.0.1"

[build-dependencies]
bindgen = "0.58"
#wasm-bindgen = "0"
once_cell = "1.7"
libc = "0"

[features]
default = ["parser"]
parser = ["nom"]
