[package]
name = "media_sdk"
version = "0.1.12"
authors = ["Robert Labonte <rlabonte@fastly.com>"]
edition = "2021"
description = "Media SDK Proof of Concept"
categories = ["wasm", "media", "video", "image"]
repository = "https://github.com/fastly/rust-ffmpeg-wasi"
keywords = ["ffmpeg", "libavcodec", "libavformat", "wasi", "wasm", "video", "images", "audio"]
readme = "README.md"

[dependencies]
fastly = "^0.7"
m3u8-rs = "^5.0.1"

[build-dependencies]
once_cell = "1.7"
libc = "0"
